k8s/mon/kubeshark/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubeshark
spec:
  type: ExternalName
  externalName: kubeshark-front.kubeshark.svc.cluster.local
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeshark-gateway
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/issuer: acme-prod
    nginx.ingress.kubernetes.io/auth-tls-secret: default/uwsca-ops
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${CLUSTER_HOST}-ks.uws.talkingpts.org
      secretName: kubeshark-certificate
  rules:
    - host: ${CLUSTER_HOST}-ks.uws.talkingpts.org
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: kubeshark
                port:
                  number: 80
